edited email and small change to other certifications

--- a/index.html
+++ b/index.html
@@ -1,74 +1,99 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>PengHian's Personal Site</title>
-  </head>
+<head>
+<meta charset="utf-8">
+<title>PengHian's Personal Site</title>
+</head>
 
 
-  <body>
-    <h1>Ang PengHian</h1>
-    <p><em>Aspiring Techlead</em></p>
-    <p>I am currently a SNOC Engineer, aspriring to be a software developer</p>
-    <a href="https://www.linkedin.com/in/penghian-ang-821a7b195/"><img src="linkedin.png" width="20" height="20" /></a>
-    <a href="Contact.html"><img src="gmail.png" width="20" height="20" /></a>
-    <hr>
+<body>
+<h1>Ang PengHian</h1>
+<p><em>Aspiring Techlead</em></p>
+<p>I am currently a SNOC Engineer, aspriring to be a software developer</p>
+<a href="https://www.linkedin.com/in/penghian-ang-821a7b195/"><img src="linkedin.png" width="20" height="20" /></a>
+<a href="mailto:penghian@gmail.com"><img src="gmail.png" width="20" height="20" /></a>
+<hr>
 
-    <h3>Education</h3>
-    <ul>
-      April 2020 - Present
-      <li><b>Diploma In Inforcomm And Digital Media </b>Temasek Poly</li>
-      <br />
+<h3>Education</h3>
+<ul>
+April 2020 - Present
+<li><b>Diploma In Inforcomm And Digital Media </b>Temasek Poly</li>
+<br />
 
-      February 2017
-      <li><b>Diploma In Fitness </b>Australia Sports Academy</li>
-      <br />
+February 2017
+<li><b>Diploma In Fitness </b>Australia Sports Academy</li>
+<br />
 
-      October 2015
-      <li><b>Higher Nitec In Information Technology </b>ITE College West</li>
-    </ul>
+October 2015
+<li><b>Higher Nitec In Information Technology </b>ITE College West</li>
+</ul>
 
-    <hr />
+<hr />
 
-    <h3>Job Experiences</h3>
-    <ol>
-      November 2020 - Present
-      <li><b>SNOC Engineer </b>Govtech Singapore</li>
-      <ul>
-        <br />
-        <li>Monitoring health status of various government projects.</li>
-        <li>Monitoring / Prevention of attacks using various software including AWS CloudWatch, Grafana,Splunk and Solarwind.</li>
-        <li>Identifies exceptions and deviations, as well as management of these situations</li>
-      </ul>
-      <br />
+<h3>Job Experiences</h3>
+<ol>
+November 2020 - Present
+<li><b>SNOC Engineer </b>Govtech Singapore</li>
+<ul>
+<br />
+<li>Monitoring health status of various government projects.</li>
+<li>Monitoring / Prevention of attacks using various software including AWS CloudWatch, Grafana,Splunk and Solarwind.</li>
+<li>Identifies exceptions and deviations, as well as management of these situations</li>
+</ul>
+<br />
 
-      February 2020
-      <li><b>NOC Engineer </b>Netpluz Asia</li>
-      <ul>
-        <br />
-        <li>Provision/troubleshoot ISP circuit including Baccess, GPON and MetroE.</li>
-        <li>Configure Sophos Brand Firewalls, as well as Cisco router and switches.</li>
-        <li>Assist customer in email troubleshooting, including smartermail and outlook. As well as assisting customer in managing their AD and Fileservers.</li>
-      </ul>
-      <br />
+February 2020
+<li><b>NOC Engineer </b>Netpluz Asia</li>
+<ul>
+<br />
+<li>Provision/troubleshoot ISP circuit including Baccess, GPON and MetroE.</li>
+<li>Configure Sophos Brand Firewalls, as well as Cisco router and switches.</li>
+<li>Assist customer in email troubleshooting, including smartermail and outlook. As well as assisting customer in managing their AD and Fileservers.</li>
+</ul>
+<br />
 
-      January 2017
-      <li><b>Personal Trainer </b>Safra Energyone</li>
-      <ul>
-        <br />
-        <li>Plan routines, choose appropriate diet plan, and choose different movements for each set of muscles, depending on clients’ capabilities and limitations. </li>
-        <li>Administer emergency first aid, wrap injuries, treat minor chronic disabilities, or refer injured persons to physicians</li>
-        <li>Promote health club through membership sales, and record member information</li>
-      </ul>
-    </ol>
+January 2017
+<li><b>Personal Trainer </b>Safra Energyone</li>
+<ul>
+<br />
+<li>Plan routines, choose appropriate diet plan, and choose different movements for each set of muscles, depending on clients’ capabilities and limitations. </li>
+<li>Administer emergency first aid, wrap injuries, treat minor chronic disabilities, or refer injured persons to physicians</li>
+<li>Promote health club through membership sales, and record member information</li>
+</ul>
+</ol>
 
-    <hr />
-    <h3>Other Certifications</h3>
-    <a href="https://www.youracclaim.com/badges/a707b7e4-6ae1-4adf-9612-e474fc65dcd4"><img src="AWS-CloudPractitioner-2020.png" width="100" height="100" /></a>
-    <a href="https://www.youracclaim.com/badges/29218e75-68d5-410e-a797-19efc63a9b6a/public_url"><img src="azure-fundamentals.png" width="100" height="100" /></a>
-      <a href="https://sophos.netexam.com/certs/11017/BBEB7C160D93498CADB656604DADAE6437299.pdf"><img src="sophos.png" width="120" height="80" /></a>
+<hr />
+<h3>Other Certifications:</h3>
+
+<table cellspacing="10">
+<tr>
+
+<td>
+<center>
+<h3>Cloud Computing</h3>
+<a href="https://www.youracclaim.com/badges/a707b7e4-6ae1-4adf-9612-e474fc65dcd4"><img src="AWS-CloudPractitioner-2020.png" width="100" height="100" /></a>
+<a href="https://www.youracclaim.com/badges/29218e75-68d5-410e-a797-19efc63a9b6a/public_url"><img src="azure-fundamentals.png" width="100" height="100" /></a>
+</center>
+</td>
+
+<td>
+<center>
+<h3>Cyber Security</h3>
+<br />
+<a href="https://sophos.netexam.com/certs/11017/BBEB7C160D93498CADB656604DADAE6437299.pdf"><img src="sophos.png" width="120" height="80" /></a>
+</center>
+</td>
+
+<td>
+<center>
+<h3>Codewars Python</h3>
+<a href="https://www.codewars.com/users/angpenghian/badges/small"><img src="https://www.codewars.com/users/angpenghian/badges/micro" width="200" height="100" /></a>
+</center>
+</td>
+
+</tr>
+</table>
 
 
-
-  </body>
+</body>
 </html>
