adding style.css and slight change to other certification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>PengHian's Personal Site</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 
 
@@ -87,7 +88,7 @@ January 2017
 <td>
 <center>
 <h3>Codewars Python</h3>
-<a href="https://www.codewars.com/users/angpenghian/badges/small"><img src="https://www.codewars.com/users/angpenghian/badges/micro" width="200" height="100" /></a>
+<a href="https://www.codewars.com/users/angpenghian"><img src="https://www.codewars.com/users/angpenghian/badges/micro" width="200" height="100" /></a>
 </center>
 </td>
 
