--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>PengHian's Personal Site</title>
-<link rel="stylesheet" href="cv/style.css" />
+<link rel="stylesheet" href="https://angpenghian.github.io/cv/style.css" />
 </head>
 
 
