--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>PengHian's Personal Site</title>
+<!--<link rel="stylesheet" href="style.css" />-->
 <link rel="stylesheet" href="https://angpenghian.github.io/cv/style.css" />
 </head>
 
@@ -66,6 +67,7 @@ January 2017
 <hr />
 <h3>Other Certifications:</h3>
 
+<div class="navbar">
 <table cellspacing="10">
 <tr>
 
@@ -94,7 +96,7 @@ January 2017
 
 </tr>
 </table>
-
+</div>
 
 </body>
 </html>
