target blank on link

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <h1>Ang PengHian</h1>
 <p><em>Aspiring Techlead</em></p>
 <p>I am currently a SNOC Engineer, aspriring to be a software developer</p>
-<a href="https://www.linkedin.com/in/penghian-ang-821a7b195/"><img src="linkedin.png" width="20" height="20" /></a>
-<a href="mailto:penghian@gmail.com"><img src="gmail.png" width="20" height="20" /></a>
+<a href="https://www.linkedin.com/in/penghian-ang-821a7b195/" target="_blank">
+<img src="linkedin.png" width="20" height="20" /></a>
+<a href="mailto:penghian@gmail.com" target="_blank">
+<img src="gmail.png" width="20" height="20" /></a>
 <hr>
 
 <h3>Education</h3>
@@ -74,8 +76,10 @@ January 2017
 <td>
 <center>
 <h3>Cloud Computing</h3>
-<a href="https://www.youracclaim.com/badges/a707b7e4-6ae1-4adf-9612-e474fc65dcd4"><img src="AWS-CloudPractitioner-2020.png" width="100" height="100" /></a>
-<a href="https://www.youracclaim.com/badges/29218e75-68d5-410e-a797-19efc63a9b6a/public_url"><img src="azure-fundamentals.png" width="100" height="100" /></a>
+<a href="https://www.youracclaim.com/badges/a707b7e4-6ae1-4adf-9612-e474fc65dcd4" target="_blank">
+<img src="AWS-CloudPractitioner-2020.png" width="100" height="100" /></a>
+<a href="https://www.youracclaim.com/badges/29218e75-68d5-410e-a797-19efc63a9b6a/public_url" target="_blank">
+<img src="azure-fundamentals.png" width="100" height="100" /></a>
 </center>
 </td>
 
@@ -83,14 +87,16 @@ January 2017
 <center>
 <h3>Cyber Security</h3>
 <br />
-<a href="https://sophos.netexam.com/certs/11017/BBEB7C160D93498CADB656604DADAE6437299.pdf"><img src="sophos.png" width="120" height="80" /></a>
+<a href="https://sophos.netexam.com/certs/11017/BBEB7C160D93498CADB656604DADAE6437299.pdf" target="_blank">
+<img src="sophos.png" width="120" height="80" /></a>
 </center>
 </td>
 
 <td>
 <center>
 <h3>Codewars Python</h3>
-<a href="https://www.codewars.com/users/angpenghian"><img src="https://www.codewars.com/users/angpenghian/badges/micro" width="200" height="100" /></a>
+<a href="https://www.codewars.com/users/angpenghian" target="_blank">
+<img src="https://www.codewars.com/users/angpenghian/badges/micro" width="200" height="100" /></a>
 </center>
 </td>
 
